--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+#container {
+    transform-origin: top center;
+}
+
+
+#head {
+    display: flex;
+    justify-content: center;
+}
+
 #buttons {
     display: flex;
     justify-content: center;
