--- a/style.css
+++ b/style.css
@@ -26,14 +26,11 @@
     }
     #attachment {
         width: 100%;
-        max-width: 200px;
+        max-width: 230px;
         margin-top: 101px;
     }
 }
 
-#jump {
-    margin: 5% 0;
-}
 
 #head {
     display: flex;
@@ -44,7 +41,6 @@
 #buttons {
     display: flex;
     justify-content: space-between;
-    gap: 100px;
     width: 100%;
 }
 
@@ -54,8 +50,7 @@ button {
 }
 
 #calendar {
-    display: flex;
-    justify-content: center;
+    min-height: 238px;
 }
 
 table {
@@ -90,20 +85,23 @@ td:last-child {
     background-color: yellow;
 }
 
-#info {
-    background-color: rgb(255, 245, 234);
-    display: flex;
-    flex-direction: column;
-    margin: 5% 0;
-}
-
 .Sta {
-   color: royalblue; 
+    color: royalblue; 
 }
 .Sun {
     color:red;
 }
 
+#info {
+    background-color: rgb(255, 245, 234);
+    display: flex;
+    flex-direction: column;
+    margin: 5% 0;
+    padding: 0 5%;
+}
+
 #jump{
     background-color: rgb(255, 240, 219);
+    margin: 5% 0;
+    padding: 0% 5%;
 }
